--- a/bai4.html
+++ b/bai4.html
@@ -40,9 +40,7 @@
         document.write('<br>');
         var Staffs = [david,
             new Staff("Luyn", "hvl@gmail.com"),
-            new Staff("Hoan", "hoan@gmail.com"),
-            new Staff("Cuong", "cuong@gmail.com"),
-
+            new Staff("Hoan", "hoan@gmail.com")
         ]
         for (let i = 0; i < Staffs.length; i++) {
             document.write(Staffs[i].fullname.toString());
