--- a/bai3.html
+++ b/bai3.html
@@ -33,7 +33,11 @@
 
                 }
             }
+            if (count==0){
+                return false;
+            }
             alert(`Có ${count} nguyên âm`);
+            
         }
         demkitu(str)
     </script>
